# endrawing

./: CLAUDE.md  README.md  __init__.py  endrawing.py  endrawingify.py  manifest  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
tests/: conftest.py  test_basic.py  test_bbox.py  test_cleanup.py  test_units.py
